2005-10-21 Francois Proulx <francois.proulx@gmail.com>
	* Integration testing for Radius debugging
	* Added network_id parameter to hotspot_status.php for selecting network
	* Default network will be automatically selected...
	
2005-10-04 Francois Proulx <francois.proulx@gmail.com>
	* Scaled down network logo
	* Changed CSS accordingly
	* Modified online users SQL query to sort better
	
2005-10-04 Francois Proulx <francois.proulx@gmail.com>
	* Removed unwanted file from checkout
	
2005-10-07 Philippe April  <philippe@ilesansfil.org>
	* Released wifidog-auth-1.0.0_m2

2005-10-06 Benoit Grégoire  <bock@step.polymtl.ca>
	* AuthenticatorLocalUserNoSignup:  Make a new authenticator, identical to AuthenticatorLocalUser
	 but disalowing new user signup.  When setting up a server, you can add your users, and then change 
	 the authenticator class from AuthenticatorLocalUser to AuthenticatorLocalUserNoSignup
	* signup.php:  Actually enforce it.  Still needs improvement, as the network is still shown for signing up.

2005-10-04 Francois Proulx <francois.proulx@gmail.com>
	* Translated some error message in SQL abstraction
	* Cleaned up error messages when starting from scratch
	* Added link to install script, when the database is empty.
	* Fixed initial data dump script
	
2005-10-04 Benoit Grégoire  <bock@step.polymtl.ca>
	* Remove a bunch of deprecated methods from the Node object,
	 document undocumented methods.
	* Make the node id editable.  This allows the gateway "MAC address as node ID"
	 patch by London wireless to be usable with the standard auth server, and to 
	 transition to using MAC address as node ID.
	* Fix a saving problem with all the content types with some versions of PHP
	* Add a new Content type:  IFrameRest.  This allows the result of a REST style query
	returning HTML to be displayed in a HTML iframeset.  Currently supported are 
	substitution of the node_id, the user_id and the last display date in the get query.