@@ -1,3 +1,7 @@
+2005-10-24 Benoit Grégoire  <bock@step.polymtl.ca>
+	* AuthenticatorRadius:  Fix bug reported by kouete, by inspection.  Fix not actually tested. 
+	 Guys, read the documentation of the function parameters when you code, it's there to help you ;)
+	 
 2005-10-21 Francois Proulx <francois.proulx@gmail.com>
 	* Integration testing for Radius debugging
 	* Added network_id parameter to hotspot_status.php for selecting network
